gcc/testsuite/rust/rustc/ui/issues/issue-28776.rs
use std::ptr;

fn main() {
    (&ptr::write)(1 as *mut _, 42);
// { dg-error ".E0133." "" { target *-*-* } .-1 }
}

